longrun_manual22/nohup.out
  File "main_manual_states_stack.py", line 1
    kimport gym
              ^
SyntaxError: invalid syntax
/home/arthurhemmer/miniconda2/lib/python2.7/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.
  from ._conv import register_converters as _register_converters
Using TensorFlow backend.
['NOOP', 'FIRE', 'UP', 'RIGHT', 'LEFT', 'DOWN', 'UPRIGHT', 'UPLEFT', 'DOWNRIGHT', 'DOWNLEFT', 'UPFIRE', 'RIGHTFIRE', 'LEFTFIRE', 'DOWNFIRE', 'UPRIGHTFIRE', 'UPLEFTFIRE', 'DOWNRIGHTFIRE', 'DOWNLEFTFIRE']
('State size:', 59)
('Finished episode', 0, 2.0, 2334, 1.0)
2018-03-22 20:05:55.292195: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:892] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero
2018-03-22 20:05:55.292574: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1030] Found device 0 with properties: 
name: Tesla K80 major: 3 minor: 7 memoryClockRate(GHz): 0.8235
pciBusID: 0000:00:04.0
totalMemory: 11.17GiB freeMemory: 11.09GiB
2018-03-22 20:05:55.292608: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1120] Creating TensorFlow device (/device:GPU:0) -> (device: 0, name: Tesla K80, pci bus id: 0000:00:04.0, compute capability: 3.7)
('Finished episode', 1, 6.0, 4653, 1.0)
('Finished episode', 2, 6.0, 7445, 1.0)
('Finished episode', 3, 8.0, 9645, 1.0)
('Finished episode', 4, 2.0, 12058, 1.0)
('Finished episode', 5, 2.0, 14418, 1.0)
('Finished episode', 6, 6.0, 16836, 1.0)
('Finished episode', 7, 6.0, 19563, 1.0)
('Finished episode', 8, 2.0, 21654, 1.0)
('Finished episode', 9, 6.0, 24535, 1.0)
('Finished episode', 10, 6.0, 27518, 1.0)
('Finished episode', 11, 2.0, 30128, 1.0)
('Finished episode', 12, 2.0, 32452, 1.0)
('Finished episode', 13, 8.0, 35010, 1.0)
('Finished episode', 14, 2.0, 37685, 1.0)
('Finished episode', 15, 6.0, 40221, 1.0)
('Finished episode', 16, 0, 42875, 1.0)
('Finished episode', 17, 6.0, 45116, 1.0)
('Finished episode', 18, 4.0, 47846, 1.0)
('Finished episode', 19, 0, 50209, 0.9993730000000052)
('Finished episode', 20, 8.0, 52564, 0.9923080000000635)
('Finished episode', 21, 8.0, 54878, 0.9853660000001208)
('Finished episode', 22, 4.0, 57175, 0.9784750000001776)
('Finished episode', 23, 8.0, 59979, 0.970063000000247)
('Finished episode', 24, 14.0, 62759, 0.9617230000003159)
('Finished episode', 25, 6.0, 65316, 0.9540520000003792)
('Finished episode', 26, 4.0, 68001, 0.9459970000004456)
('Finished episode', 27, 4.0, 70585, 0.9382450000005096)
('Finished episode', 28, 4.0, 73395, 0.9298150000005792)
('Finished episode', 29, 10.0, 75859, 0.9224230000006401)
('Finished episode', 30, 0, 78352, 0.9149440000007019)
('Finished episode', 31, 8.0, 81314, 0.9060580000007752)
('Finished episode', 32, 6.0, 83971, 0.898087000000841)
('Finished episode', 33, 16.0, 86390, 0.8908300000009008)
('Finished episode', 34, 14.0, 88705, 0.8838850000009582)
('Finished episode', 35, 6.0, 90891, 0.8773270000010123)
('Finished episode', 36, 22.0, 93612, 0.8691640000010796)
('Finished episode', 37, 6.0, 96341, 0.8609770000011472)
('Finished episode', 38, 12.0, 98616, 0.8541520000012035)
('Finished episode', 39, 14.0, 100910, 0.8472700000012603)
('Finished episode', 40, 20.0, 103355, 0.8399350000013208)
('Finished episode', 41, 16.0, 106161, 0.8315170000013903)
('Finished episode', 42, 12.0, 108556, 0.8243320000014496)
('Finished episode', 43, 10.0, 111234, 0.8162980000015159)
('Finished episode', 44, 6.0, 113508, 0.8094760000015722)
('Finished episode', 45, 8.0, 116179, 0.8014630000016383)
('Finished episode', 46, 6.0, 118734, 0.7937980000017015)
('Finished episode', 47, 10.0, 121563, 0.7853110000017716)
('Finished episode', 48, 10.0, 123844, 0.778468000001828)
('Finished episode', 49, 12.0, 126258, 0.7712260000018878)
('Finished episode', 50, 8.0, 128324, 0.7650280000019389)
('Finished episode', 51, 6.0, 130521, 0.7584370000019933)
('Finished episode', 52, 12.0, 132867, 0.7513990000020514)
('Finished episode', 53, 10.0, 135281, 0.7441570000021112)
('Finished episode', 54, 12.0, 137919, 0.7362430000021765)
('Finished episode', 55, 8.0, 140065, 0.7298050000022296)
('Finished episode', 56, 6.0, 142424, 0.722728000002288)
('Finished episode', 57, 6.0, 145143, 0.7145710000023553)
('Finished episode', 58, 14.0, 147961, 0.706117000002425)
('Finished episode', 59, 6.0, 150220, 0.699340000002481)
('Finished episode', 60, 6.0, 152534, 0.6923980000025383)
('Finished episode', 61, 10.0, 155059, 0.6848230000026008)
('Finished episode', 62, 8.0, 157467, 0.6775990000026604)
('Finished episode', 63, 16.0, 159881, 0.6703570000027201)
('Finished episode', 64, 12.0, 162171, 0.6634870000027768)
('Finished episode', 65, 14.0, 164441, 0.656677000002833)
('Finished episode', 66, 10.0, 166747, 0.6497590000028901)
('Finished episode', 67, 4.0, 169307, 0.6420790000029535)
('Finished episode', 68, 14.0, 171593, 0.6352210000030101)
('Finished episode', 69, 22.0, 174848, 0.6254560000030907)
('Finished episode', 70, 12.0, 177668, 0.6169960000031605)
('Finished episode', 71, 18.0, 180153, 0.609541000003222)
('Finished episode', 72, 22.0, 182893, 0.6013210000032898)
('Finished episode', 73, 21.0, 185507, 0.5934790000033545)
('Finished episode', 74, 28.0, 188148, 0.5855560000034199)
('Finished episode', 75, 27.0, 191097, 0.5767090000034929)
('Finished episode', 76, 30.0, 193561, 0.5693170000035539)
('Finished episode', 77, 16.0, 196065, 0.5618050000036159)
('Finished episode', 78, 18.0, 198803, 0.5535910000036837)
('Finished episode', 79, 12.0, 201729, 0.5448130000037561)
('Finished episode', 80, 16.0, 204341, 0.5369770000038208)
('Finished episode', 81, 14.0, 206732, 0.52980400000388)
('Finished episode', 82, 10.0, 209331, 0.5220070000039443)
('Finished episode', 83, 20.0, 211934, 0.5141980000040087)
('Finished episode', 84, 10.0, 214329, 0.507013000004068)
('Finished episode', 85, 32.0, 216700, 0.4999000000041267)
('Finished episode', 86, 6.0, 219479, 0.4915630000041955)
('Finished episode', 87, 12.0, 222443, 0.4826710000042689)
('Finished episode', 88, 22.0, 225523, 0.4734310000043451)
('Finished episode', 89, 16.0, 227957, 0.4661290000044054)
('Finished episode', 90, 13.0, 231008, 0.4569760000044809)
('Finished episode', 91, 21.0, 233606, 0.4491820000045452)
('Finished episode', 92, 4.0, 236141, 0.441577000004608)
('Finished episode', 93, 16.0, 238745, 0.43376500000467244)
('Finished episode', 94, 6.0, 241211, 0.4263670000047335)
('Finished episode', 95, 24.0, 243894, 0.4183180000047999)
('Finished episode', 96, 12.0, 246311, 0.41106700000485974)
('Finished episode', 97, 28.0, 249365, 0.40190500000493534)
('Finished episode', 98, 16.0, 251540, 0.3953800000049892)
('Finished episode', 99, 21.0, 254080, 0.38776000000505206)
('Finished episode', 100, 11.0, 256644, 0.38006800000511554)
('Finished episode', 101, 10.0, 259030, 0.3729100000051746)
('Finished episode', 102, 18.0, 261386, 0.3658420000052329)
('Finished episode', 103, 24.0, 263674, 0.35897800000528957)
('Finished episode', 104, 30.0, 266118, 0.35164600000535007)
('Finished episode', 105, 15.0, 268683, 0.34395100000541357)
('Finished episode', 106, 20.0, 271342, 0.3359740000054794)
('Finished episode', 107, 24.0, 273669, 0.328993000005537)
('Finished episode', 108, 12.0, 275961, 0.32211700000559373)
('Finished episode', 109, 30.0, 278741, 0.31377700000566255)
('Finished episode', 110, 25.0, 281689, 0.30493300000573553)
('Finished episode', 111, 19.0, 284254, 0.29723800000579903)
('Finished episode', 112, 24.0, 286526, 0.2904220000058553)
('Finished episode', 113, 16.0, 288710, 0.28387000000590934)
('Finished episode', 114, 16.0, 291093, 0.27672100000596833)
('Finished episode', 115, 16.0, 293694, 0.2689180000060327)
('Finished episode', 116, 12.0, 296148, 0.26155600000609347)
('Finished episode', 117, 16.0, 298818, 0.25354600000615957)
('Finished episode', 118, 18.0, 301310, 0.2460700000061849)
('Finished episode', 119, 10.0, 303755, 0.23873500000617756)
('Finished episode', 120, 12.0, 306167, 0.23149900000617032)
('Finished episode', 121, 38.0, 309286, 0.22214200000616097)
('Finished episode', 122, 24.0, 312393, 0.21282100000615164)
('Finished episode', 123, 38.0, 314859, 0.20542300000614425)
('Finished episode', 124, 39.0, 317673, 0.1969810000061358)
